--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -76,6 +76,7 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
+  --border-color:#fff;
 }
 
 .dark {
@@ -116,6 +117,7 @@
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
     @apply bg-background text-foreground;
   }
@@ -124,12 +126,116 @@
 html,
 body {
   background: var(--token-34eead55-4d83-4946-9bf7-21b528b31f2a, rgb(0, 0, 0));
+  font-family: "Manrope", "Manrope Placeholder", sans-serif;
 }
 
 @media (max-width: 1439px) {
+
   html,
   body {
     background: rgb(0, 0, 0);
   }
+}
+
+/* Revolving border effect */
+.revolving-border {
+  position: relative;
+  z-index: 0;
+  overflow: hidden;
+  border-radius: 1rem;
+  /* same as rounded-2xl */
+}
+
+.revolving-border::before {
+  content: "";
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  right: -2px;
+  bottom: -2px;
+  border-radius: inherit;
+  background: conic-gradient(from 353deg at 50% 50%, #9f8acf00 124.04138513513513deg, #cbb6fa 186.66385135135135deg, #0000 252.61190878378378deg);
+  z-index: -1;
+  animation: spinBorder 4s linear infinite;
+}
+
+.revolving-border::after {
+  content: "";
+  position: absolute;
+  inset: 2px;
+  /* inner padding so border looks visible */
+  border-radius: inherit;
+  background: hsl(295, 100%, 2%);
+  /* red-700 card background */
+  z-index: 1;
+  /* color: #ffffff; */
+}
+
+/* Animation */
+@keyframes spinBorder {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+
+.border_glow:after{
+    content: "";
+    border-width: var(--border-top-width, 0) var(--border-right-width, 0) var(--border-bottom-width, 0) var(--border-left-width, 0);
+    border-color: var(--border-color, none);
+    border-style: var(--border-style, none);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    box-sizing: border-box;
+    left: 0;
+    top: 0;
+    border-radius: inherit;
+    pointer-events: none;
+    }
+
+
+.gradient-underline {
+  position: relative;
+  padding-bottom: 6px; /* space for the underline */
+}
+
+.gradient-underline::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 1px; /* thickness of the line */
+  width: 100%;
+  background: linear-gradient(to right, #070108, white, #070108);
+  box-shadow: 0 0 6px rgba(255, 255, 255, 0.2); /* soft glow */
+  
+}
+
+
+.gradient-underline2 {
+  position: relative;
+  padding-bottom: 6px; /* space for the underline */
+}
+
+.gradient-underline2:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 0.5px; /* thickness of the line */
+  width: 60%;
+  background: linear-gradient(to right, white, #070108);
+  box-shadow: 0 0 6px rgba(255, 255, 255, 0.2); /* soft glow */
+  
+}
+
+.image_big:hover{
+  transform: scale(1.2);
+  transition: ease-in-out 3s;
 }
 
